tests/NormalTests/paczka1/fuzzy1/85532262.err
Error in line 6: CJcIt0k2 S480 79,7
Error in line 8: CJcIt0k2 A371 98,5
Error in line 11: TJLWl1l S391 9,9
Error in line 31: S480 S480 91,09
Error in line 26: S480 A371 91,7
Error in line 23: QS5P8F8wQ S558 38,2
